--- a/[Template]_Analisando_os_Dados_do_Airbnb.ipynb
+++ b/[Template]_Analisando_os_Dados_do_Airbnb.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/isabelbrandao/Projects-of-data-science/blob/main/%5BTemplate%5D_Analisando_os_Dados_do_Airbnb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/isabelbrandao/Projects-of-data-science/blob/main/Analysis_of_Amsterdam_Airbnb_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
