--- a/Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -24,11 +24,11 @@
         "\n",
         "---\n",
         "\n",
-        "# Análise dos Dados do Airbnb - *Sua Cidade*\n",
+        "# Analysis of Airbnb data - *Amsterdam*\n",
         "\n",
-        "O [Airbnb](https://www.airbnb.com.br/) já é considerado como sendo a **maior empresa hoteleira da atualidade**. Ah, o detalhe é que ele **não possui nenhum hotel**!\n",
+        "[Airbnb](https://www.airbnb.com.br/) is already considered **the largest hotel company of the current time**. Oh, the detail is that **it doesn't own any hotels**!\n",
         "\n",
-        "Conectando pessoas que querem viajar (e se hospedar) com anfitriões que querem alugar seus imóveis de maneira prática, o Airbnb fornece uma plataforma inovadora para tornar essa hospedagem alternativa.\n",
+        "Connecting people who want to travel (and stay) with hosts who want to rent their properties in a practical way, Airborn provides an innovative platform for this alternative lodging.\n",
         "\n",
         "No final de 2018, a Startup fundada 10 anos atrás, já havia **hospedado mais de 300 milhões** de pessoas ao redor de todo o mundo, desafiando as redes hoteleiras tradicionais.\n",
         "\n",
