--- a/Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -20,7 +20,7 @@
         "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
         "\n",
         "#### **Data Science na Prática 4.0**\n",
-        "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
+        "*Exercise template given by [sigmoidal.ai](https://sigmoidal.ai)* and solved by Isabel Brandao\n",
         "\n",
         "---\n",
         "\n",
