--- a/Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -30,9 +30,9 @@
         "\n",
         "Connecting people who want to travel (and stay) with hosts who want to rent their properties in a practical way, Airborn provides an innovative platform for this alternative lodging.\n",
         "\n",
-        "No final de 2018, a Startup fundada 10 anos atrás, já havia **hospedado mais de 300 milhões** de pessoas ao redor de todo o mundo, desafiando as redes hoteleiras tradicionais.\n",
+        "By the end of 2018, the startup founded a decade ago had already **hosted over 300 million** people around the world, challenging traditional hotel chains.\n",
         "\n",
-        "Uma das iniciativas do Airbnb é disponibilizar dados do site, para algumas das principais cidades do mundo. Por meio do portal [Inside Airbnb](http://insideairbnb.com/get-the-data.html), é possível baixar uma grande quantidade de dados para desenvolver projetos e soluções de *Data Science*.\n",
+        "One of Airbnb's initiatives is to provide data from the website, for some of the world's major cities. Through the [Inside Airbnb](http://insideairbnb.com/get-the-data.html), it is possible to access a large amount of data to develop *Data Science* projects and solutions.\n",
         "\n",
         "<center><img alt=\"Analisando Airbnb\" width=\"10%\" src=\"https://www.area360.com.au/wp-content/uploads/2017/09/airbnb-logo.jpg\"></center>\n",
         "\n",
