--- a/Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -36,7 +36,7 @@
         "\n",
         "<center><img alt=\"Analisando Airbnb\" width=\"10%\" src=\"https://www.area360.com.au/wp-content/uploads/2017/09/airbnb-logo.jpg\"></center>\n",
         "\n",
-        "**Neste *notebook*, iremos analisar os dados referentes à cidade ________, e ver quais insights podem ser extraídos a partir de dados brutos.**"
+        "**In this *notebook*, we will analyze the data related to the city of Amsterdam, and check what insights can be drawn from the raw data.**"
       ]
     },
     {
