--- a/Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -24,19 +24,19 @@
         "\n",
         "---\n",
         "\n",
-        "# Analysis of Airbnb data - *Amsterdam*\n",
+        "# Analysis of Airbnb data in - *Amsterdam*\n",
         "\n",
-        "[Airbnb](https://www.airbnb.com.br/) is already considered **the largest hotel company of the current time**. Oh, the detail is that **it doesn't own any hotels**!\n",
+        "[Airbnb](https://www.airbnb.com.br/) is already considered **the largest hotel company of our time**, with a unique twist **it doesn't own any hotels**!\n",
         "\n",
-        "Connecting people who want to travel (and stay) with hosts who want to rent their properties in a practical way, Airborn provides an innovative platform for this alternative lodging.\n",
+        "Airbnb connects people looking to travel and find accommodations with hosts who want to rent out their properties in a convenient manner, providing an innovative platform for alternative lodging.\n",
         "\n",
-        "By the end of 2018, the startup founded a decade ago had already **hosted over 300 million** people around the world, challenging traditional hotel chains.\n",
+        "As of the end of 2018, this startup, founded a decade ago, had already **accommodated over 300 million** people globally, challenging traditional hotel chains.\n",
         "\n",
-        "One of Airbnb's initiatives is to provide data from the website, for some of the world's major cities. Through the [Inside Airbnb](http://insideairbnb.com/get-the-data.html), it is possible to access a large amount of data to develop *Data Science* projects and solutions.\n",
+        "One of Airbnb's notable initiatives is to provide data from its platform, for various major cities worldwide. Through the [Inside Airbnb](http://insideairbnb.com/get-the-data.html) portal, you can access a wealth of data to develop *Data Science* projects and solutions.\n",
         "\n",
         "<center><img alt=\"Analisando Airbnb\" width=\"10%\" src=\"https://www.area360.com.au/wp-content/uploads/2017/09/airbnb-logo.jpg\"></center>\n",
         "\n",
-        "**In this *notebook*, we will analyze the data related to the city of Amsterdam, and check what insights can be drawn from the raw data.**"
+        "**In this *notebook*, we will explore the data specific to the city of Amsterdam, with the goal of revealing valuable insights from the raw data.**"
       ]
     },
     {
