--- a/Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -45,7 +45,7 @@
         "id": "0zxQHhIUDF_2"
       },
       "source": [
-        "## Obtenção dos Dados\n"
+        "## Accessing the Airbnb Data\n"
       ]
     },
     {
@@ -54,7 +54,7 @@
         "id": "Vhp2wMPgJ6zX"
       },
       "source": [
-        "# importar os pacotes necessarios\n"
+        "# import required packages\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -65,7 +65,7 @@
         "id": "tUmoAT8DLQ5T"
       },
       "source": [
-        "# importar o arquivo listings.csv para um DataFrame\n"
+        "# import data listings.csv into a DataFrame\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -76,7 +76,7 @@
         "id": "qb5By2nIMS6m"
       },
       "source": [
-        "## Análise dos Dados\n"
+        "## Data Analysis\n"
       ]
     },
     {
@@ -85,13 +85,13 @@
         "id": "RYgvuebKNg8-"
       },
       "source": [
-        "**Dicionário das variáveis**\n",
+        "**dictionary with variables**\n",
         "\n",
         "* ...\n",
         "* ...\n",
         "* ...\n",
         "\n",
-        "Antes de iniciar qualquer análise, vamos verificar a cara do nosso *dataset*, analisando as 5 primeiras entradas."
+        "Before initiating any analysis, let's begin by examining the initial entries in our *dataset*. We will review the first 5 entries to get sense of the data."
       ]
     },
     {
